<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_gz_sim</name>
  <version>1.0.19</version>
  <description>Tools for using Gazebo Sim simulation with ROS.</description>

  <!-- Maintainers -->
  <maintainer email="adityapande@intrinsic.ai">Aditya Pande</maintainer>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez</maintainer>

  <license>Apache 2.0</license>

  <!-- Authors -->
  <author email="addisuzt@intrinsic.ai">Addisu Taddese</author>
  <author email="caguero@openrobotics.org">Carlos Agüero</author>
  <author>Alejandro Hernandez</author>

  <!-- Build‑tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <!-- Run‑time dependencies -->
  <depend>ament_index_python</depend>
  <depend>builtin_interfaces</depend>
  <depend>cli11</depend>
  <depend>geometry_msgs</depend>
  <depend>gz_math_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_sim_vendor</depend>
  <depend>gz_transport_vendor</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>libgflags-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>rcpputils</depend>
  <depend>ros2pkg</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>simulation_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>ros_gz_bridge</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
